--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <label for="text">Message</label>
             <textarea name="text" cols="30" rows="10" placeholder="Type here your message" required></textarea>
 
-            <input type="hidden" name="redirectTo" value="index.html">
+            <input type="hidden" name="redirectTo" value="https://ph-bicalho.github.io/ph-bicalho/index.html">
             <input type="submit" id="send-button" value="Submit" >
 
         </form>
