--- a/pt.html
+++ b/pt.html
@@ -210,7 +210,7 @@
             <label for="text">Mensage,</label>
             <textarea name="text" cols="30" rows="10" placeholder="Escreva aqui sua mensagem" required></textarea>
 
-            <input type="hidden" name="redirectTo" value="index.html">
+            <input type="hidden" name="redirectTo" value="https://ph-bicalho.github.io/ph-bicalho/pt.html">
             <input type="submit" id="send-button" value="Enviar" >
 
         </form>
