--- a/pt.html
+++ b/pt.html
@@ -52,7 +52,7 @@
     
     <section id="About"  >
         <div class="container" data-animate="left">
-            <h2>About</h2>
+            <h2> Sobre </h2>
 
             <p>
                 Tive meu primeiro contato com a programação em 2021, desde então eu estive apaixonado com a área.
